<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e3e8ea"
    tools:context=".ui.console.DatabaseDetailFragment">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp"
        card_view:cardBackgroundColor="@color/primaryLightColorBlueGray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:id="@+id/tv_dbName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/db_name" />
                <TextView
                    android:id="@+id/tv_docCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/doc_count" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:id="@+id/tv_conflictCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/conflict_count" />
                <TextView
                    android:id="@+id/tv_lastSeq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_seq" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:padding="4dp">
                <TextView
                    android:id="@+id/tv_revCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/revision_count" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_publicUUID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/public_uuid"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/tv_privateUUID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/private_uuid"
                android:padding="4dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:id="@+id/tv_replicationCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replication_count"
        android:padding="8dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="4dp"/>
</LinearLayout>
