<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="1dp"
    tools:context=".ui.console.DatabaseDetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_db_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text=""/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray"/>
            <TextView
                android:id="@+id/tv_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/url_db"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray"/>
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_height="wrap_content"
                android:background="@color/active"
                android:textColor="@color/translucent_white_80"
                android:text="IDEL"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">
            <TextView
                android:id="@+id/tv_changeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_count" />
            <TextView
                android:id="@+id/tv_lifeCycle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Continuous | Pull |" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tv_completedChangeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_changes" />

            <TextView
                android:id="@+id/tv_pendingChangeCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/pending_count" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_lastError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_error"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>

    </LinearLayout>
</android.support.v7.widget.CardView>